<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PerfilActivity">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:civ_border_width="3dp"
            android:src="@drawable/ic_launcher_foreground"
            app:civ_border_color="#FF000000"
            tools:ignore="VectorDrawableCompat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/texto_nombre_perfil_cliente"
            tools:text="Mentor Mentorin Mentorcillo"
            android:textColor="#000000" android:textSize="18sp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/texto_correo_perfil_cliente"
            tools:text="mentor@correo.com"
            android:textColor="#000000" android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/texto_nombre_perfil_cliente"
            app:layout_constraintHorizontal_bias="0.501"/>
    <CheckBox
            android:text="@string/checkbox_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBoxCv"
            app:layout_constraintStart_toStartOf="parent"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/texto_correo_perfil_cliente" android:layout_marginTop="64dp"
            android:enabled="false" app:layout_constraintEnd_toEndOf="parent"/>
    <CheckBox
            android:text="@string/checkbox_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBoxLinkedin"
            app:layout_constraintStart_toStartOf="@+id/checkBoxCv"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCv" android:layout_marginTop="16dp"
            android:enabled="false"/>
    <CheckBox
            android:text="@string/checkbox_simulador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBoxSimulador"
            app:layout_constraintStart_toStartOf="@+id/checkBoxCv"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxLinkedin" android:layout_marginTop="16dp"
            android:enabled="false"/>
    <CheckBox
            android:text="@string/checkbox_psicometria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBoxPsicometria"
            app:layout_constraintStart_toStartOf="@+id/checkBoxCv" android:layout_marginTop="16dp"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSimulador" android:enabled="false"/>
    <CheckBox
            android:text="@string/checkbox_estrategia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/checkBoxEstrategia"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPsicometria"
            android:buttonTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/checkBoxCv" android:layout_marginTop="16dp"
            android:enabled="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>